децимального номера без кода документа.
    * Удалены параметры о необходимости сохранять размер, положение окна и
размеры колонок таблицы. Теперь они будут сохраняться всегда.
    * Немного изменено диалоговое окно импорта параметров.
    * Обновлён пример схемы для демонстрации работы программы.
    * Обновлено руководство пользователя.

2017-07-11  Version 3.11
========================
    * Исправлена автоматическая коррекция децимального номера.
    * Исправлен вызов справки из меню программы в ОС Windows.
    * При автоматическом добавлении единиц измерения теперь, также,
добавляется префикс "мк" для конденсаторов со значением в виде десятичной
дроби и "п" для конденсаторов со значением в виде целого числа.
    * Исправлена обработка пустых полей.
    * Исправлены опечатки в интерфейсе программы.
    * Исправлено форматирование в дополнительных полях шаблона для упрощения
ввода данных вручную.
    * Исправлена работа флага сохранения при выполнении отмены изменений.
    * Добавлены разделители для формирования наименования компонента.
Разделители представлены в виде префиксов и суффиксов для полей, участвующих в
в образовании наименования компонента (марка, значение, класс точности, тип и
стандарт). Все они задаются на специальной вкладке в редакторе настроек.
Если какое-то из полей пустое, то при формировании перечня, соответствующие ему
разделители в наименование не вставляются.
    * Добавлены псевдонимы для полей. Каждому из необходимых для kicadbom2spec
полей (Группа, Марка, Значение, Класс точности, Тип, Стандарт и Примечание)
можно назначить любое другое пользовательское поле.
    * Изменён диалог создания перечня элементов. Теперь в нём отображаются поля
основной надписи с возможностью редактирования. Изменённые значения сохраняются
обратно в файл схемы. Недостающее в KiCAD поле имени нормоконтролёра хранится
в настройках kicadbom2spec.
    * Исправлена нумерация страниц для перечней, состоящих из одного листа
(согласно ГОСТ2.104-2006, раздел 6.1).