@@ -507,6 +507,10 @@ image::sort_indicator.png[]
 В заголовке столбца, по которому выполнена сортировка, отображается индикатор с
 указанием направления сортировки.
 
+NOTE: Элементы управления операционной системы Windows XP не поддерживают
+Unicode, поэтому там используются символы **<** и **>** в качестве индикаторов
+сортировки.
+
 
 ==== Выделение элементов
 
@@ -823,9 +827,9 @@ image::settings_editor.png[]
 Эти параметры относятся к программе в целом. Рассмотрим каждый из параметров в
 отдельности.
 
-**Отображать пробелы в виде точек "᛫"** -- если этот параметры установлен, то
+**Отображать пробелы в виде точек "·"** -- если этот параметры установлен, то
 в таблице полей и поле ввода редактора ячеек/полей пробелы будут показаны в
-виде специального символа "᛫".
+виде специального символа "·".
 
 **Запоминать выбор элементов** -- если это параметр установлен, то при
 сохранении файла схемы для элементов, которые исключены из перечня элементов
@@ -944,7 +948,7 @@ image::editor_separators.png[]
 
 NOTE: Так как в составе разделителей могут использоваться пробелы, то для
 повышения читабельности, в полях ввода символы пробелов обозначаются
-специальным символом "᛫".
+специальным символом "·".
 
 
 === Псевдонимы
