@@ -1387,6 +1387,20 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>В заголовке столбца, по которому выполнена сортировка, отображается индикатор с
 указанием направления сортировки.</p>
 </div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<div class="title">Примечание</div>
+</td>
+<td class="content">
+Элементы управления операционной системы Windows XP не поддерживают
+Unicode, поэтому там используются символы <strong>&lt;</strong> и <strong>&gt;</strong> в качестве индикаторов
+сортировки.
+</td>
+</tr>
+</table>
+</div>
 </div>
 <div class="sect3">
 <h4 id="_выделение_элементов">2.2.2. Выделение элементов</h4>
@@ -1811,9 +1825,9 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 отдельности.</p>
 </div>
 <div class="paragraph">
-<p><strong>Отображать пробелы в виде точек "᛫"</strong>&#8201;&#8212;&#8201;если этот параметры установлен, то
+<p><strong>Отображать пробелы в виде точек "·"</strong>&#8201;&#8212;&#8201;если этот параметры установлен, то
 в таблице полей и поле ввода редактора ячеек/полей пробелы будут показаны в
-виде специального символа "᛫".</p>
+виде специального символа "·".</p>
 </div>
 <div class="paragraph">
 <p><strong>Запоминать выбор элементов</strong>&#8201;&#8212;&#8201;если это параметр установлен, то при
@@ -1989,7 +2003,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="content">
 Так как в составе разделителей могут использоваться пробелы, то для
 повышения читабельности, в полях ввода символы пробелов обозначаются
-специальным символом "᛫".
+специальным символом "·".
 </td>
 </tr>
 </table>
@@ -2229,7 +2243,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 <div id="footer">
 <div id="footer-text">
-Редакция от 2017-10-15 22:50:46 EEST
+Редакция от 2017-10-18 11:49:15 EEST
 </div>
 </div>
 </body>
