@@ -7822,7 +7822,7 @@
                                             <property name="gripper">0</property>
                                             <property name="hidden">0</property>
                                             <property name="id">wxID_ANY</property>
-                                            <property name="label">Отображать пробелы в виде точек &quot;᛫&quot;</property>
+                                            <property name="label">Отображать пробелы в виде точек &quot;·&quot;</property>
                                             <property name="max_size"></property>
                                             <property name="maximize_button">0</property>
                                             <property name="maximum_size"></property>
@@ -11985,7 +11985,7 @@
                                                     <property name="gripper">0</property>
                                                     <property name="hidden">0</property>
                                                     <property name="id">wxID_ANY</property>
-                                                    <property name="label">символом &quot;᛫&quot; обозначены пробелы.</property>
+                                                    <property name="label">символом &quot;·&quot; обозначены пробелы.</property>
                                                     <property name="max_size"></property>
                                                     <property name="maximize_button">0</property>
                                                     <property name="maximum_size"></property>
