@@ -49,6 +49,7 @@
     * Немного изменено диалоговое окно импорта параметров.
     * Обновлён пример схемы для демонстрации работы программы.
     * Обновлено руководство пользователя.
+    * Заменены спец. символы Unicode для совместимости с Windows XP.
 
 2017-07-11  Version 3.11
 ========================
